# Security-Cameras-System-for-Streets

./: README.md
BFS/: README.md  ece650-a4.cpp
BuildGraph/: Changelog.md  README.md  a1ece650.py
MessagePipe/: CMakeLists.txt  README.md  ece650-a1.py  ece650-a2.cpp  ece650-a3.cpp  output.txt  rgen.cpp
ShortestPath/: README.md  ece650-a2.cpp
securityCamerasSystem/: CMakeLists.txt  README.md  ece650-prj.cpp  ece650.h  ex
securityCamerasSystem/runTime/: APPROX-VC-1.txt  APPROX-VC-2.txt  CNF-SAT-VC.txt
